@@ -408,6 +408,25 @@ each zone.
 The file containing the zone information. If this attribute is present
 it is used to read and write the zone contents. If the attribute is
 absent it prevents writing out of the zone.
+.IP
+The string is processed so that one string can be used (in a pattern)
+for a lot of different zones.  If the label or character does not exist the
+percent-character is replaced with a period for output (i.e. for the
+third character in a two letter domain name).
+.IP
+.B %s\fR is replaced with the zone name.
+.IP
+.B %1\fR is replaced with the first character of the zone name.
+.IP
+.B %2\fR is replaced with the second character of the zone name.
+.IP
+.B %3\fR is replaced with the third character of the zone name.
+.IP
+.B %z\fR is replaced with the toplevel domain name of the zone.
+.IP
+.B %y\fR is replaced with the next label under the toplevel domain.
+.IP
+.B %x\fR is replaced with the next-next label under the toplevel domain.
 .TP
 .B allow\-notify:\fR <ip\-spec> <key\-name | NOKEY | BLOCKED>
 Access control list. The listed (primary) address is allowed to 
